--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <script src="%PUBLIC_URL%/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
     <link rel="import" href="%PUBLIC_URL%/bower_components/vaadin-button/vaadin-button.html">
+    <link rel="import" href="%PUBLIC_URL%/bower_components/vaadin-dialog/vaadin-dialog.html">
     <link rel="import" href="%PUBLIC_URL%/bower_components/vaadin-text-field/vaadin-text-field.html">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
